@@ -1,6 +1,7 @@
 2013-02-22  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #45764: Connect static_country_zones to static_countries
+	* Apply TCA userFuncs to Static Info Tables Manager tables
 
 2013-02-21  Stanislas Rolland  <typo3@sjbr.ca>
 
